--- a/admin/src/main/resources/后端接口.md
+++ b/admin/src/main/resources/后端接口.md
@@ -1,15 +1,13 @@
 项目要求
 1.登录
-    姓名
-    身份证号码
-    密码
-    重复密码
-        通过就进行二次验证 
-
+姓名
+身份证号码
+密码
+重复密码
+通过就进行二次验证
 
 不通过 1.输入错误
-              2.没有这个账号
-        
+2.没有这个账号
 
 接口1 身份证 姓名 密码 重复密码
 
@@ -35,8 +33,9 @@ POST /api/auth/verify-identity
 200 OK：验证成功，返回下一步操作指引。
 400 Bad Request：验证失败，返回具体的错误信息（如字段格式错误）。
 403 Forbidden：身份验证失败（例如，身份证号码与姓名不匹配）。
+
 2. 邮箱补全与验证码发送
-   
+
    ```
    POST /api/auth/send-email-code
    {
@@ -44,15 +43,15 @@ POST /api/auth/verify-identity
        "email": "string"         // 完整的邮箱地址
    }
    ```
-   
-   
-   响应：
+
+响应：
 
 200 OK：验证码已发送，包含验证码的有效时间和是否允许再次发送的信息。
 400 Bad Request：参数错误或邮箱格式不正确。
 429 Too Many Requests：请求过于频繁，暂时禁止发送验证码。
+
 3. 验证码验证
-   
+
    ```
    POST /api/auth/verify-email-code
    {
@@ -68,16 +67,21 @@ POST /api/auth/verify-identity
 429 Too Many Requests：验证码验证失败次数过多，账户被临时锁定。
 
 4. Token刷新（可选）
-   
-   
+
    ```
    POST /api/auth/refresh-token
    {
        "refreshToken": "string"
    }
    ```
-   
-   
 
 200 OK：返回新的访问token。
 401 Unauthorized：刷新token无效或已过期。
+
+查询转账记录包含：
+1.操作人姓名
+2.操作时间
+3.交易金额
+4.交易类型
+5.交易后余额
+6.备注
